--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,14 @@
 @tailwind utilities;
 
 
+.info-data {
+    @apply text-base  text-blue-600 
+}
+
+.info-title {
+    @apply mt-0 text-base text-gray-600
+}
+
+.info-ul {
+    @apply grid grid-cols-6 gap-2 space-x-2 rounded-lg  border-gray-400 p-2 lg:grid-cols-6 xl:py-0 xl:gap-0  
+}
